<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        android:text="@string/regist_title"
        android:textColor="#000000"
        android:gravity="center_horizontal"
        android:background="@drawable/border_bottom"
        android:textSize="30dp">
    </TextView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:id="@+id/rGroup_mode"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:id="@+id/rb_usermode"
                    android:text="일반 사용자">
                </RadioButton>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="모금단체"
                    android:id="@+id/rb_charitymode">
                </RadioButton>
            </RadioGroup>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/regist_id"
                android:textSize="20dp">
            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_id"
                    android:layout_weight="1"

                    android:hint="이메일 형식으로 입력">
                </EditText>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:layout_marginLeft="10dp"
                    android:text="중복확인"
                    android:visibility="gone"
                    android:padding="0dp"
                    android:id="@+id/btn_testid"
                    android:textSize="12dp">
                </Button>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/regist_pwd"
                android:textSize="20dp">
            </TextView>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_pwd"
                android:inputType="textPassword"
                android:layout_weight="1"
                android:layout_marginBottom="20dp"
                android:hint="8자리 이상 영문, 숫자, 특수문자 혼합해주세요 ">
            </EditText>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/regist_pwd2"
                android:textSize="20dp">
            </TextView>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_pwd2"
                android:layout_weight="1"
                android:layout_marginBottom="20dp"
                android:inputType="textPassword"
                android:hint="비밀번호 확인">
            </EditText>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_name"
                android:text="@string/regist_name"
                android:textSize="20dp">
            </TextView>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_name"
                android:layout_weight="1"
                android:layout_marginBottom="20dp"
                android:hint="본인 실명을 입력해주세요">
            </EditText>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/regist_phone"
                android:id="@+id/text_phone"
                android:textSize="20dp">
            </TextView>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_phone"
                android:layout_weight="1"
                android:layout_marginBottom="20dp"
                android:hint="  - 포함하여 입력해주세요">
            </EditText>





            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/regist_nick"
                android:textSize="20dp">
            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_nick"
                    android:layout_weight="1"

                    android:hint="닉네임을 입력해주세요">
                </EditText>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:layout_marginLeft="10dp"
                    android:text="중복확인"
                    android:padding="0dp"
                    android:visibility="gone"
                    android:id="@+id/btn_testnick"
                    android:textSize="12dp">
                </Button>
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_submit"
                android:text="회원가입"
                app:cornerRadius="55dp">

            </com.google.android.material.button.MaterialButton>

        </LinearLayout>
    </ScrollView>


</LinearLayout>